--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ volumes:
 
 configs:
   node_rules:
-    file: ./prometheus/rules/swarm_node.rules.yml
+    file: ./spyGlass-prometheus/rules/swarm_node.rules.yml
   task_rules:
-    file: ./prometheus/rules/swarm_task.rules.yml
+    file: ./spyGlass-prometheus/rules/swarm_task.rules.yml
 
 services:
   cadvisor:
@@ -52,7 +52,7 @@ services:
       #- GF_SMTP_USER=${GF_SMTP_USER}
       #- GF_SMTP_PASSWORD=${GF_SMTP_PASSWORD}
     volumes:
-      - grafana:/var/lib/grafana
+      - spyGlass_grafana:/var/lib/grafana
     deploy:
       mode: replicated
       replicas: 1
@@ -77,7 +77,7 @@ services:
       - '--config.file=/etc/alertmanager/alertmanager.yml'
       - '--storage.path=/alertmanager'
     volumes:
-      - alertmanager:/alertmanager
+      - spyGlass_am:/alertmanager
     deploy:
       mode: replicated
       replicas: 1
@@ -139,7 +139,7 @@ services:
       - '--storage.tsdb.path=/prometheus'
       - '--storage.tsdb.retention=24h'
     volumes:
-      - prometheus:/prometheus
+      - spyGlass-prometheus:/prometheus
     configs:
       - source: node_rules
         target: /etc/prometheus/swarm_node.rules.yml
