--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
       #- GF_SMTP_PASSWORD=${GF_SMTP_PASSWORD}
     volumes:
       - grafana:/var/lib/grafana
+    ports:
+      - 3000:3000
     deploy:
       mode: replicated
       replicas: 1
@@ -78,6 +80,8 @@ services:
       - '--storage.path=/alertmanager'
     volumes:
       - alertmanager:/alertmanager
+    ports:
+      - 9093:9093
     deploy:
       mode: replicated
       replicas: 1
@@ -96,6 +100,8 @@ services:
       - net
     environment:
       - "ALERTMANAGER_URIS=default:http://alertmanager:9093"
+    ports:
+      - 8080:8080
     deploy:
       mode: replicated
       replicas: 1
@@ -145,6 +151,8 @@ services:
         target: /etc/prometheus/swarm_node.rules.yml
       - source: task_rules
         target: /etc/prometheus/swarm_task.rules.yml
+    ports:
+      - 9090:9090
     deploy:
       mode: replicated
       replicas: 1
