--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,16 +134,10 @@ services:
         reservations:
           memory: 64M
 
-  graphite_rrd:
+  graphiterrd:
     image: graphiteapp/graphite-statsd
     networks:
       - net
-    ports:
-      - 9180:80
-      - 9181:81
-      - 8125:8125/udp
-      - 8126:8126
-      - 2003:2003
     volumes:
       - type: bind
         source: /home/ubuntu/speedtest-cli/rrd
