--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,15 @@ volumes:
     prometheus: {}
     grafana: {}
     alertmanager: {}
+    influxSNMP: {}
 
 configs:
   node_rules:
     file: ./spyGlass-prometheus/rules/swarm_node.rules.yml
   task_rules:
     file: ./spyGlass-prometheus/rules/swarm_task.rules.yml
+  telegraf:
+    file: ./spyGlass-telegraf/telegraf.conf
 
 services:
   cadvisor:
@@ -148,6 +151,38 @@ services:
       - type: bind
         source: /home/ubuntu/speedtest-cli/rrd
         target: /opt/graphite/storage/rrd
+
+  influxSNMP:
+    image: influxdb
+    networks:
+      - net
+    environment:
+      - INFLUXDB_DB=grafana
+      - INFLUXDB_HTTP_AUTH_ENABLED=false
+    volumes:
+      - influxSNMP:/var/lib/influxdb
+    ports:
+      - 8086:8086
+#    command:
+#      - '/init-influxdb.sh'
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
+
+  telegraf:
+    image: nuntz/telegraf-snmp
+    networks:
+      - net
+    configs:
+      - source: telegraf
+        target: /etc/telegraf/telegraf.conf
+    volumes:
+      - type: bind
+        source: ./spyGlass-telegraf/mibs
+        target: /root/.snmp/mibs
 
   prometheus:
     image: tibmeister/spyglass-prometheus
