--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ networks:
 
 volumes:
     prometheus: {}
-    grafana: {}
+#    grafana: {}
     alertmanager: {}
     influxSNMP: {}
+    influx-pfSense: {}
 
 configs:
   node_rules:
@@ -55,7 +56,8 @@ services:
       #- GF_SMTP_USER=${GF_SMTP_USER}
       #- GF_SMTP_PASSWORD=${GF_SMTP_PASSWORD}
     volumes:
-      - grafana:/var/lib/grafana
+      #- grafana:/var/lib/grafana
+      - /nfs/swarm/spyGlassData/grafana:/var/lib/grafana
     ports:
       - 3000:3000
     deploy:
@@ -152,8 +154,26 @@ services:
         source: /home/ubuntu/speedtest-cli/rrd
         target: /opt/graphite/storage/rrd
 
+  influx-pfSense:
+    image: influxdb:1.7.7
+    networks:
+      - net
+    environment:
+      - INFLUXDB_DB=pfSense-cheron
+      - INFLUXDB_HTTP_AUTH_ENABLED=false
+    volumes:
+      - influx-pfSense:/var/lib/influxdb
+    ports:
+      - 8084:8086
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
+
   influxSNMP:
-    image: influxdb
+    image: influxdb:1.7.7
     networks:
       - net
     environment:
@@ -163,8 +183,6 @@ services:
       - influxSNMP:/var/lib/influxdb
     ports:
       - 8086:8086
-#    command:
-#      - '/init-influxdb.sh'
     deploy:
       mode: replicated
       replicas: 1
@@ -174,6 +192,8 @@ services:
 
   telegraf:
     image: nuntz/telegraf-snmp
+    depends_on:
+      - influxSNMP
     networks:
       - net
 #    configs:
