--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,15 @@ networks:
 
 volumes:
     prometheus: {}
-#    grafana: {}
     alertmanager: {}
     influxSNMP: {}
     influx-pfSense: {}
 
 configs:
   node_rules:
-    file: ./spyGlass-prometheus/rules/swarm_node.rules.yml
+    file: /nfs/swarm/dockerfiles/spyGlass/spyGlass-prometheus/rules/swarm_node.rules.yml
   task_rules:
-    file: ./spyGlass-prometheus/rules/swarm_task.rules.yml
-#  telegraf:
-#    file: ./spyGlass-telegraf/telegraf.conf
+    file: /nfs/swarm/dockerfiles/spyGlass/spyGlass-prometheus/rules/swarm_task.rules.yml
 
 services:
   cadvisor:
@@ -34,11 +31,14 @@ services:
       - /var/lib/docker/:/var/lib/docker:ro
     deploy:
       mode: global
+      placement:
+        constraints:
+          - node.role != manager
       resources:
         limits:
           memory: 128M
         reservations:
-          memory: 64M
+          memory: 8M
 
   grafana:
     image: tibmeister/spyglass_grafana
@@ -48,6 +48,7 @@ services:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_INSTALL_PLUGINS=natel-usgs-datasource
       #- GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL:-localhost}
       #- GF_SMTP_ENABLED=${GF_SMTP_ENABLED:-false}
       #- GF_SMTP_FROM_ADDRESS=${GF_SMTP_FROM_ADDRESS:-grafana@test.com}
@@ -56,21 +57,22 @@ services:
       #- GF_SMTP_USER=${GF_SMTP_USER}
       #- GF_SMTP_PASSWORD=${GF_SMTP_PASSWORD}
     volumes:
-      #- grafana:/var/lib/grafana
       - /nfs/swarm/spyGlassData/grafana:/var/lib/grafana
     ports:
       - 3000:3000
+    logging:
+      driver: json-file
     deploy:
       mode: replicated
       replicas: 1
       placement:
         constraints:
-          - node.role == manager
+          - node.role != manager
       resources:
         limits:
-          memory: 128M
+          memory: 512M
         reservations:
-          memory: 64M
+          memory: 128M
 
   alertmanager:
     image: tibmeister/spyglass_am
@@ -92,12 +94,12 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.role == manager
+          - node.role != manager
       resources:
         limits:
-          memory: 128M
+          memory: 12M
         reservations:
-          memory: 64M
+          memory: 8M
 
   unsee:
     image: cloudflare/unsee:v0.8.0
@@ -110,6 +112,14 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      placement:
+        constraints:
+          - node.role != manager
+      resources:
+        limits:
+          memory: 12M
+        reservations:
+          memory: 8M
 
   node-exporter:
     image: tibmeister/spyglass-node-exporter
@@ -133,26 +143,92 @@ services:
       - '--no-collector.ipvs'
     deploy:
       mode: global
+      placement:
+        constraints:
+          - node.role != manager
       resources:
         limits:
-          memory: 128M
+          memory: 12M
         reservations:
-          memory: 64M
+          memory: 8M
 
   graphiterrd:
-    image: graphiteapp/graphite-statsd
+    image: graphiteapp/graphite-statsd:1.1.6-1
     networks:
       - net
     ports:
-      - 9180:80
-      - 9181:81
-      - 8125:8125/udp
-      - 8126:8126
-      - 2003:2003
+      - 9280:80
+      - 9281:81
+      - 8225:8125/udp
+      - 8226:8126
+      - 2203:2003
     volumes:
       - type: bind
         source: /home/ubuntu/speedtest-cli/rrd
         target: /opt/graphite/storage/rrd
+    deploy:
+      placement:
+        constraints:
+          - node.hostname==opti.mus.tiberiansun.us
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 16M
+
+  speedtest-dvn:
+    image: graphiteapp/graphite-statsd:1.1.6-1
+    networks:
+      - net
+    ports:
+      - 9282:80
+    volumes:
+      - type: bind
+        source: /home/ubuntu/speedtest-cli/rrd_dvn
+        target: /opt/graphite/storage/rrd
+    deploy:
+      placement:
+        constraints:
+          - node.hostname==opti.mus.tiberiansun.us
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 16M
+
+  graphite:
+    image: graphiteapp/graphite-statsd:1.1.6-2
+    networks:
+      - net
+    ports:
+      - 80:80
+      - 2003:2003
+      - 2004:2004
+      - 2023:2023
+      - 2024:2024
+      - 8125:8125/udp
+      - 8126:8126
+    volumes:
+      - type: bind
+        source: /nfs/swarm/spyGlassData/graphite/conf
+        target: /opt/graphite/conf
+      - type: bind
+        source: /nfs/swarm/spyGlassData/graphite/storage
+        target: /opt/graphite/storage
+      - type: bind
+        source: /nfs/swarm/spyGlassData/statsd/config
+        target: /opt/statsd/config
+    deploy:
+      mode: replicated
+      replicas: 1 
+      placement:
+        constraints:
+          - node.role != manager
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 128M
 
   influx-pfSense:
     image: influxdb:1.7.7
@@ -170,7 +246,12 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.role == manager
+          - node.role != manager
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 128M
 
   influxSNMP:
     image: influxdb:1.7.7
@@ -188,7 +269,12 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.role == manager
+          - node.role != manager
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 24M
 
   telegraf:
     image: nuntz/telegraf-snmp
@@ -196,16 +282,19 @@ services:
       - influxSNMP
     networks:
       - net
-#    configs:
-#      - source: telegraf
-#        target: /etc/telegraf/telegraf.conf
     volumes:
       - type: bind
-        source: ./spyGlass-telegraf/mibs
+        source: /nfs/swarm/dockerfiles/spyGlass/spyGlass-telegraf/mibs
         target: /root/.snmp/mibs
       - type: bind
-        source: ./spyGlass-telegraf/telegraf
+        source: /nfs/swarm/dockerfiles/spyGlass/spyGlass-telegraf/telegraf
         target: /etc/telegraf
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+        reservations:
+          memory: 8M
 
   prometheus:
     image: tibmeister/spyglass-prometheus
@@ -231,9 +320,9 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.role == manager
+          - node.role != manager
       resources:
         limits:
-          memory: 2048M
+          memory: 1024M
         reservations:
           memory: 128M
