--- a/spyGlass_grafana/datasources/prometheus.yaml
+++ b/spyGlass_grafana/datasources/prometheus.yaml
@@ -14,6 +14,6 @@ datasources:
 - name: RRD
   type: graphite
   access: proxy
-  url: http://graphiterrd:9180
+  url: http://graphiterrd
   isDefault: false
   editable: true
