--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -152,50 +152,6 @@ services:
         reservations:
           memory: 8M
 
-  graphiterrd:
-    image: graphiteapp/graphite-statsd:1.1.6-1
-    networks:
-      - net
-    ports:
-      - 9280:80
-      - 9281:81
-      - 8225:8125/udp
-      - 8226:8126
-      - 2203:2003
-    volumes:
-      - type: bind
-        source: /home/ubuntu/speedtest-cli/rrd
-        target: /opt/graphite/storage/rrd
-    deploy:
-      placement:
-        constraints:
-          - node.hostname==opti.mus.tiberiansun.us
-      resources:
-        limits:
-          memory: 256M
-        reservations:
-          memory: 16M
-
-  speedtest-dvn:
-    image: graphiteapp/graphite-statsd:1.1.6-1
-    networks:
-      - net
-    ports:
-      - 9282:80
-    volumes:
-      - type: bind
-        source: /home/ubuntu/speedtest-cli/rrd_dvn
-        target: /opt/graphite/storage/rrd
-    deploy:
-      placement:
-        constraints:
-          - node.hostname==opti.mus.tiberiansun.us
-      resources:
-        limits:
-          memory: 256M
-        reservations:
-          memory: 16M
-
   graphite:
     image: graphiteapp/graphite-statsd:1.1.6-2
     networks:
@@ -321,6 +277,24 @@ services:
       placement:
         constraints:
           - node.role != manager
+      resources:
+        limits:
+          memory: 1024M
+        reservations:
+          memory: 128M
+
+  covid-us:
+    image: jessestuart/covid_exporter
+    networks:
+      - net
+    ports:
+      - 9091:9090
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
       resources:
         limits:
           memory: 1024M
