--- a/spyGlass_grafana/Dockerfile
+++ b/spyGlass_grafana/Dockerfile
@@ -1,4 +1,4 @@
-FROM grafana/grafana:6.7.2
+FROM grafana/grafana:7.1.4
 # https://hub.docker.com/r/grafana/grafana/tags/
 
 COPY datasources /etc/grafana/provisioning/datasources/
@@ -9,4 +9,4 @@ ENV GF_SECURITY_ADMIN_PASSWORD=admin \
     GF_SECURITY_ADMIN_USER=admin \
     GF_PATHS_PROVISIONING=/etc/grafana/provisioning/
 
-RUN grafana-cli plugins install briangann-gauge-panel && grafana-cli plugins install michaeldmoore-multistat-panel
+## RUN grafana-cli plugins install briangann-gauge-panel && grafana-cli plugins install michaeldmoore-multistat-panel
