--- a/spyGlass-prometheus/conf/prometheus.yml
+++ b/spyGlass-prometheus/conf/prometheus.yml
@@ -28,11 +28,10 @@ scrape_configs:
       port: 9323
 
   - job_name: 'cadvisor'
-    dns_sd_configs:
-    - names:
-      - 'tasks.cadvisor'
-      type: 'A'
-      port: 9080
+    scrape_interval: 5s
+    static_configs:
+      - targets:
+        - cadvisor:8080
 
   - job_name: 'node-exporter'
     dns_sd_configs:
