--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,10 @@ version: "3.3"
 secrets:
   GF_SMTP_PASS:
     external: true
+  GF_SMTP_HOST:
+    external: true
+  GF_SMTP_USER:
+    external: true
 
 networks:
   net:
@@ -49,6 +53,11 @@ services:
     ports:
       - 6379:6379
 
+  renderer:
+    image: grafana/grafana-image-renderer:latest
+    environment:
+      - ENABLE_METRICS=true
+
   grafana:
     image: tibmeister/spyglass_grafana
     networks:
@@ -65,11 +74,14 @@ services:
       #- GF_SERVER_CERT_KEY__FILE=/tmp/certs/cheron.tiberiansun.us.key
       #- GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL:-localhost}
       - GF_SMTP_ENABLED=true
-      - GF_SMTP_FROM_ADDRESS=noreply@tiberiansun.us
+      - GF_SMTP_FROM_ADDRESS__FILE=/var/run/secrets/GF_SMTP_USER
       - GF_SMTP_FROM_NAME=Grafana
-      - GF_SMTP_HOST__FILE=/run/secrets/GF_SMTP_HOST
-      - GF_SMTP_USER__FILE=/run/secrets/GF_SMTP_USER
-      - GF_SMTP_PASSWORD__FILE=/run/secrets/GF_SMTP_PASS
+      - GF_SMTP_HOST__FILE=/var/run/secrets/GF_SMTP_HOST
+      - GF_SMTP_USER__FILE=/var/run/secrets/GF_SMTP_USER
+      - GF_SMTP_PASSWORD__FILE=/var/run/secrets/GF_SMTP_PASS
+      - GF_RENDERING_SERVER_URL=http://renderer:8081
+      - GF_RENDERING_CALLBACK_URL=http://grafana:3000/
+      - GF_LOG_FILTERS=rendering:debug 
     volumes:
       - /nfs/swarm/spyGlassData/grafana:/var/lib/grafana
       #- "/nfs/swarm/LetsEncrypt/cheron.tiberiansun.us:/tmp/certs/:ro"
@@ -78,6 +90,8 @@ services:
       #- 8123:8123
     secrets:
       - GF_SMTP_PASS
+      - GF_SMTP_USER
+      - GF_SMTP_HOST
     logging:
       driver: json-file
     deploy:
